# GPiD-Framework

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  autogen.sh  doxygen.cfg.in  version.yml.in
LEGACY_solvers/cvc4/: CMakeLists.txt
LEGACY_solvers/minisat/: CMakeLists.txt  snippets-config.yaml
LEGACY_solvers/minisat/cxx/: context.hpp  gpid_printers.hpp  parsers.cpp  problem_src.cpp  solver.hpp  solver_src.cpp
LEGACY_solvers/z3/: CMakeLists.txt  snippets-config.yaml
LEGACY_solvers/z3/cxx/: context.hpp  implicate_printer.hpp  problem_src.cpp  solver_src.cpp
exec/: CMakeLists.txt
exec/src/: gpid-gts.cpp  gpid-guniti.cpp  gpid-ilinva.cpp  gpid-impgen.cpp  gpid-masmalig.cpp  gpid-parser.cpp
exec/src/utils/: gts-executors.hpp  gts-options.hpp  guniti-executors.hpp  guniti-options.hpp  ilinva-executors.hpp  ilinva-options.hpp  ilinva-wrappers.hpp  impgen-executors.hpp  impgen-options.hpp  impgen-wrappers.hpp  masmalig-options.hpp  parser-options.hpp
exec/templates/ilinva/: executors.hpp
exec/templates/sai/: guniti-executors.hpp  identifiers.hpp  impgen-executors.hpp
framework/: CMakeLists.txt
framework/gpid/algorithms/: bpd_algorithm.hpp  impgen.hpp  pid_algorithm.hpp
framework/gpid/core/: algorithm.hpp  config.hpp.in  engine.hpp  errors.hpp  hypotheses.hpp  literals.hpp  memory.hpp  options.hpp  saitypes.hpp  solvers.hpp  storage.hpp  system.hpp  wrappers.hpp
framework/gpid/ilinva/: algorithm.hpp  coreich.hpp  dual_data.hpp  dual_engine.hpp  dual_ssag.hpp  dual_strengthener.hpp  options.hpp
framework/gpid/impgen/: advanced_engine.hpp  algorithm.hpp  guniti.hpp  guniti_engine.hpp  implicates.hpp  naive_engine.hpp  options.hpp  skipcontrol.hpp
framework/gpid/include/: AbstractSolver.hpp  DecompEngine.hpp  GenerationAlgorithms.hpp  Hypotheses.hpp  Memory.hpp  config.hpp.in  errors.hpp.in  gpid.all.hpp.in  gpid.cvc4.hpp.in  gpid.hpp.in  gpid.minisat.hpp.in  gpid.z3.hpp.in  solver_interface.hpp.in  version.hpp
framework/gpid/instrument/: controller.hpp  infoline.hpp  instrument.hpp  options.hpp  selection_graph.hpp  selgraph.hpp  webtrace.hpp
framework/gpid/loaders/: abdparser.hpp  abdparseutils.hpp  pblloader.hpp
framework/gpid/masmalig/: algorithm.hpp  options.hpp
framework/gpid/options/: options_abducibles.hpp  options_core.hpp  options_engine.hpp  options_instrument.hpp
framework/gpid/propositional/: inputs_minisat.hpp  minisat_engine.hpp  minisat_inputs.hpp  minisat_outputs.hpp  minisat_pengine.hpp  minisat_solver.hpp  minisat_wrapper.hpp  minisat_wrappers.hpp  pengine_minisat.hpp
framework/gpid/reference/: version.hpp
framework/gpid/sai/: saitypes.hpp
framework/gpid/smt/: cvc4_context.hpp  cvc4_engine.hpp  cvc4_inputs.hpp  cvc4_outputs.hpp  cvc4_solver.hpp  z3_context.hpp  z3_engine.hpp  z3_inputs.hpp  z3_outputs.hpp  z3_solver.hpp
framework/gpid/src/: Engine.cpp  Generate.cpp  Memory.cpp
framework/gpid/storage/: atrees.hpp
framework/gpid/util/: generators.hpp  instrument_controller.hpp  parsers.hpp  skipper_controller.hpp  stdutils.hpp  storage.hpp
framework/gpid/utils/: abdparser.hpp  abdparseutils.hpp  hprinters.hpp  pblloader.hpp  smtlib2solver.hpp  stdutils.hpp
framework/minisat/include/: MinisatPropositionalEngine.hpp
framework/minisat/src/: Instances.cpp  MinisatProblem.cpp  MinisatSolver.cpp
framework/src/config/: version.cpp.in
framework/src/core/: algorithm.cpp  system.cpp
framework/src/gpid/: skipcontrol.cpp
framework/src/ilinva/: strenid.cpp
framework/src/impgen/: skipcontrol.cpp
framework/src/instrument/: control.cpp  controller.cpp  infoline.cpp  instrument_core.cpp  selection_graph.cpp  selgraph.cpp  webtrace.cpp
framework/src/loaders/: abdparser_generic.cpp  abdparser_util.cpp
framework/src/memory/: memory.cpp
framework/src/misc/: truesolver_algorithms.cpp
framework/src/options/: options_parser.cpp
framework/src/propositional/: minisat_algorithms.cpp  minisat_dimacs.cpp  minisat_helpers.cpp  minisat_parsers.cpp  minisat_problem.cpp  minisat_solver.cpp
icodeh/why3-whyml/: CMakeLists.txt
ilinva-ch/why3-whyml/: CMakeLists.txt
iphandle/why3-wrapped/: CMakeLists.txt
lib/: CMakeLists.txt
lib/antlr4/: CMakeLists.txt
lib/cxxopts/: CMakeLists.txt
lib/dot/: CMakeLists.txt
lib/infoline/: CMakeLists.txt
lib/lcdot/: CMakeLists.txt
lib/lisptp/: CMakeLists.txt
lib/minpart/: CMakeLists.txt
lib/mlbsmt2/: CMakeLists.txt
lib/pctrace/: CMakeLists.txt
lib/smtlib2/: CMakeLists.txt
lib/smtlib2tools/: CMakeLists.txt
lib/smtlit/: CMakeLists.txt
lib/snlog/: CMakeLists.txt
lib/starray/: CMakeLists.txt
lib/stdutils/: CMakeLists.txt
lib/ugly/: CMakeLists.txt
lib/why3cpp/: CMakeLists.txt
lib/why3wrap/: CMakeLists.txt
lib/whymlp/: CMakeLists.txt
lib/witchw/: CMakeLists.txt
solvers/: CMakeLists.txt
solvers/alt-ergo-smtlib/: CMakeLists.txt
solvers/cvc4/: CMakeLists.txt  snippets-config.yaml
solvers/cvc4-api/: CMakeLists.txt  config.yaml
solvers/cvc4-smtl2/: CMakeLists.txt
solvers/cvc4-smtlib/: CMakeLists.txt
solvers/example/: CMakeLists.txt  snippets-config.yaml
solvers/minisat/: CMakeLists.txt  snippets-config.yaml
solvers/minisatp/: CMakeLists.txt
solvers/tisi/: CMakeLists.txt
solvers/verit-smtlib/: CMakeLists.txt
solvers/z3/: CMakeLists.txt  snippets-config.yaml
solvers/z3-api/: CMakeLists.txt  config.yaml.temp
solvers/z3-smtl2/: CMakeLists.txt
solvers/z3-smtlib/: CMakeLists.txt
test/: CMakeLists.txt
test/abduce/: example.0.abduce
test/benchmarks/: mlw.bz2  smt.bz2
test/csystem/: CSystemTest.py
test/dimacs/: CMakeLists.txt
test/framework/: AbducibleTree.cpp
test/gpid/: CMakeLists.txt
test/ilinva/: CMakeLists.txt
test/minpart/: CMakeLists.txt
test/mlw/: .gitignore
test/parsers/: CMakeLists.txt
test/tooleval/: gtsMinisatResultsChecker.tes  gtsMinisatTool.tes  impgenMinisatResultsChecker.tes  impgenMinisatTool.tes
test/tooleval-args/: gtsMinisatResultsChecker.arg.1  gtsMinisatResultsChecker.arg.2  impgenMinisatResultsChecker.arg.1
test/unit/: CMakeLists.txt
tools/: CMakeLists.txt
(+874 files in other folders)
