# ==============================================================================
# Additional local libraries targets
# ==============================================================================
add_subdirectory(snlog)
add_subdirectory(ugly)
add_subdirectory(lcdot)
add_subdirectory(lisptp)
add_subdirectory(pctrace)
add_subdirectory(smtlib2)
add_subdirectory(starray)
add_subdirectory(infoline)
add_subdirectory(witchw)
add_subdirectory(why3wrap)
add_subdirectory(cxxopts)
add_subdirectory(antlr4)
add_subdirectory(whymlp)
add_subdirectory(smtlit)
