# ==============================================================================
# Additional local libraries targets
# ==============================================================================
add_subdirectory(snlog)
add_subdirectory(stdutils)
add_subdirectory(ugly)
add_subdirectory(lcdot)
add_subdirectory(lisptp)
add_subdirectory(smtlib2)
add_subdirectory(starray)
add_subdirectory(why3wrap)
add_subdirectory(cxxopts)
add_subdirectory(antlr4)
add_subdirectory(whymlp)
add_subdirectory(smtlit)
